<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/rootMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:orientation="vertical"
        android:background="#f7f1e3">

        <TextView
            android:id="@+id/grade0"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#27ae60"
            android:gravity="center"
            android:textColor="@color/colorSwanWhite"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_0_3c">
        </TextView>
        <TextView
            android:id="@+id/grade1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#f1c40f"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_4a_4c">
        </TextView>
        <TextView
            android:id="@+id/grade2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#2980b9"
            android:gravity="center"
            android:textColor="@color/colorSwanWhite"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_5a_5b">
        </TextView>
        <TextView
            android:id="@+id/grade3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#95a5a6"
            android:gravity="center"
            android:textColor="@color/colorSwanWhite"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_5c_6a">
        </TextView>
        <TextView
            android:id="@+id/grade4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#e67e22"
            android:gravity="center"
            android:textColor="@color/colorSwanWhite"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_6b_6c">
        </TextView>
        <TextView
            android:id="@+id/grade5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#fd79a8"
            android:gravity="center"
            android:textColor="@color/colorSwanWhite"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_7a_7b">
        </TextView>
        <TextView
            android:id="@+id/grade6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="#c0392b"
            android:gravity="center"
            android:textColor="@color/colorSwanWhite"
            android:textStyle="bold"
            android:textSize="21sp"
            android:text="@string/_7b_harder">
        </TextView>
    </LinearLayout>

    <RelativeLayout
    android:id="@+id/progressMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f1e3">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_centerInParent="true"
            style="android.R.attr.progressBarStyleLarge"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading_routes"
            android:textSize="16dp"
            android:layout_below="@+id/progressBar"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</LinearLayout>
